@@ -40,6 +40,7 @@
     [/aspect]
 #enddef
 
+{DEFAULT_ASPECT_EMPTY advancements}
 {DEFAULT_ASPECT_VALUE aggression 0.4}
 {DEFAULT_ASPECT_VALUE attack_depth 5}
 [aspect]
