@@ -990,6 +990,9 @@
         name = "Fedor Khod'kov (teddy/fkhodkov)"
     [/entry]
     [entry]
+        name = "Felix Bauer (flix)"
+    [/entry]
+    [entry]
         name = "Francesco Gigli (Jaramir)"
     [/entry]
     [entry]
