@@ -203,6 +203,7 @@ wesnoth_sources = Split("""
     ai/interface.cpp
     ai/lua/core.cpp
     ai/lua/lua_object.cpp
+    ai/lua/unit_advancements_aspect.cpp
     ai/manager.cpp
     ai/registry.cpp
     ai/testing.cpp
