@@ -22,6 +22,10 @@ Version 1.11.4+dev:
    * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
      in alphabetical order
    * Added -Wno-null-conversion to the CMake pedantic flags.
+ * WML engine:
+   * Added new aspect 'advancements' which with lua engine can handle a
+     function return type of the form f(x, y) -> String. 'advancements'
+     tells the AI to what unit a given unit should advance to.
 
 Version 1.11.4:
  * AI:
